--- a/readerMoive/pages/movies/movie-template/movie.wxml
+++ b/readerMoive/pages/movies/movie-template/movie.wxml
@@ -1,8 +1,8 @@
 <import src="../stars-template/stars.wxml"/>
 <template name="movieTemplate">
   <view class='movie-container'>
-    <image class='movie-img' src="/images/zjqr.png"></image>
-    <text class='movie-title'>你的名字</text>
-    <template is="startsTemplate"></template>
+    <image class='movie-img' src="{{ coverageUrl }}"></image>
+    <text class='movie-title'>{{ title }}</text>
+    <template is="startsTemplate" data="{{ stars: stars, score: average }}"></template>
   </view>
 </template>
