--- a/readerMoive/pages/movies/movies.wxml
+++ b/readerMoive/pages/movies/movies.wxml
@@ -1,6 +1,12 @@
 <import src="movie-list-template/movie-list.wxml"/>
-<view>
-  <template is="movieListTemplate"/>
-  <template is="movieListTemplate"/>
-  <template is="movieListTemplate"/>
+<view class='container'>
+  <view class='movies-template'>
+    <template is="movieListTemplate" data="{{ ...inTheaters }}"/>
+  </view>
+  <view class='movies-template'>
+    <template is="movieListTemplate" data="{{ ...comingSoon }}"/>
+  </view>
+  <view class='movies-template'>
+    <template is="movieListTemplate" data="{{ ...top250 }}"/>
+  </view>
 </view>
