0112-动态设置导航栏标题

--- a/readerMoive/pages/movies/movie-list-template/movie-list.wxml
+++ b/readerMoive/pages/movies/movie-list-template/movie-list.wxml
@@ -4,7 +4,7 @@
     <view class='inner-container'>
       <view class='movie-head'>
         <text class='slogan'>{{ cagetoryTitle }}</text>
-        <view class='more' catchtap='onMoreTap'>
+        <view class='more' catchtap='onMoreTap' data-category="{{ cagetoryTitle }}">
           <text class='more-text'>更多</text>
           <image class='more-img' src="../../images/icon/link.png"></image>
         </view>
