--- a/readerMoive/pages/movies/movies.wxss
+++ b/readerMoive/pages/movies/movies.wxss
@@ -2,6 +2,33 @@
 .container {
   background-color: #f2f2f2;
 }
+.search {
+  display: flex;
+  flex-direction: row;
+}
+.search input {
+  height: 100%;
+  width: 600rpx;
+  margin-left: 20rpx;
+  font-size: 28rpx;
+}
+.search-img {
+  margin: auto 0 auto 20rpx;
+}
+.placeholder {
+  font-size: 14rpx;
+  color: #d1d1d1;
+  margin-left: 20rpx;
+}
 .movies-template {
   margin-bottom: 30rpx;
+}
+.search-pannel {
+  position: absolute;
+  top: 80rpx;
+}
+.del-img {
+  height: 60rpx;
+  width: 60rpx;
+  margin: auto 0;
 }
