--- a/readerMoive/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/readerMoive/pages/movies/movie-grid/movie-grid-template.wxml
@@ -1,5 +1,6 @@
 <import src='../movie-template/movie.wxml'/>
 <template name="movieGridTemplate">
+  <text>搜索页面出来了...</text>
   <scroll-view scroll-y="true" scroll-x="false" bindscrolltolower="onScrollLower" class='grid-container'>
     <block wx:for="{{ movies }}" wx:for-item="movie">
       <view class='single-view-container'>
