--- a/readerMoive/pages/movies/movies.wxss
+++ b/readerMoive/pages/movies/movies.wxss
@@ -1,4 +1,6 @@
 @import 'movie-list-template/movie-list.wxss';
+@import 'movie-grid/movie-grid-template.wxss';
+
 .container {
   background-color: #f2f2f2;
 }
