--- a/readerMoive/pages/movies/movie-template/movie.wxml
+++ b/readerMoive/pages/movies/movie-template/movie.wxml
@@ -1,6 +1,6 @@
 <import src="../stars-template/stars.wxml"/>
 <template name="movieTemplate">
-  <view class='movie-container'>
+  <view class='movie-container' catchtap='onMovieTap' data-movieId="{{ movieId }}">
     <image class='movie-img' src="{{ coverageUrl }}"></image>
     <text class='movie-title'>{{ title }}</text>
     <template is="startsTemplate" data="{{ stars: stars, score: average }}"></template>
