--- a/readerMoive/pages/movies/stars-template/stars.wxml
+++ b/readerMoive/pages/movies/stars-template/stars.wxml
@@ -2,7 +2,7 @@
 <!--包裹5颗星星  -->
   <view class='stars-container'>
     <view class='stars'>
-      <block wx:for="{{ stars }}" wx:for-item = "i">
+      <block wx:for="{{ stars }}" wx:for-item = "i" wx:key='index'>
         <image wx:if="{{ i }}" src='/images/icon/star.png'></image>
         <image wx:else src='/images/icon/chat.png'></image>
       </block>
