--- a/readerMoive/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/readerMoive/pages/movies/movie-grid/movie-grid-template.wxml
@@ -1,10 +1,10 @@
 <import src='../movie-template/movie.wxml'/>
 <template name="movieGridTemplate">
-  <scroll-view scroll-y="true" scroll-x="false" bindscrolltolower="onScrollLower" class='grid-container'>
+  <view scroll-y="true" scroll-x="false" bindscrolltolower="onScrollLower" class='grid-container'>
     <block wx:for="{{ movies }}" wx:for-item="movie" wx:key='index'>
       <view class='single-view-container'>
         <template is="movieTemplate" data="{{ ...movie }}"/>
       </view>
     </block>
-  </scroll-view>
+  </view>
 </template>
